gateway-api/rates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rates
  labels:
    app: rates
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rates
  template:
    metadata:
      labels:
        app: rates
    spec:
      containers:
      - name: rates
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rates
spec:
  selector:
    app: rates
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
