gateway-api/inventory-route-bluegreen.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kubecon-inventory
spec:
  hostnames:
    - inventory.liwen-kubecon-demo.com
  parentRefs:
  - name: kubecon-demo
    sectionName: http 
  rules:
  - backendRefs:  
    - name: inventory-v1
      kind: Service
      port: 8090
      weight: 10
    - name: inventory-v2
      kind: ServiceImport
      weight: 90
