gateway-api/parking-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: kubecon-parking
spec:
  hostnames:
    - parking.liwen-kubecon-demo.com
  parentRefs:
  - name: kubecon-demo
    sectionName: http 
  rules:
  - backendRefs:  
    - name: rates
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /rates
  - backendRefs:
    - name: reviews
      kind: Service
      port: 8090
    matches:
    - path:
        type: PathPrefix
        value: /reviews
